--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron .",
-    "release": "electron-packager . --platform=darwin --arch=x64 --overwrite",
-    "release all": "electron-packager . --all --overwrite"
+    "release": "node build.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hudichao/electron-digital-clock.git"
   },
-  "author": "",
+  "author": "hudichao",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hudichao/electron-digital-clock/issues"
